# communication_python

./: .gitignore  Makefile  README.md  pyproject.toml
communication_subspace/: config.yaml  faCrossVal.py  faTestLoglike.py  factorAnalysis.py  factorRegress.py  main.py  reducedRank.py  reducedRankcrossval.py  runFA.py
communication_subspace/adapted/: alignment.py  rrr.py
communication_subspace/core/: faCrossVal.py  faTestLoglike.py  factorRegress.py  main.py  reducedRank.py  reducedRankcrossval.py  ridgelambda.py  runFA.py
communication_subspace/ibl_communication/: aggregate_results.py  check_config.py  collate_cross_epoch_stats.py  cross_epoch_fit_single_animal.py  crossvalidated_ridge.py  crossvalidated_rrr.py  ephys_region_communication.py  fit_single_animal.py  group_level_rrr.py  intrinsic_dimensionality.py  plotting.py  svd_null_test.py  utils.py  widefield_rrr_analysis.py
communication_subspace/ibl_communication/check/: check_comm_frac.py  check_consistency.py  check_trial_columns.py
notebooks/: check_engagement_stats.ipynb  cross_decoder.ipynb  ephys_pairwise_sessions.ipynb  null_metric.ipynb  null_tests.ipynb  plot_dimensions.ipynb  ridge_regress_predictions.ipynb  test_functions.ipynb
