[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "communication_subspace"
version = "0.0.1"
description = "Code for identifying communication subspaces in neural data"
authors = [
  { name = "Debottam Kundu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "pip",
    "pytest",
    "python-dotenv",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.2"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["communication_subspace"]
force_sort_within_sections = true


